--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 
 .container{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(118, 111,182);
+    color: white;
+    padding: 10px;
+    text-align: center;
     /* this part will stack the two divs on 
     top of each other */
     
@@ -14,6 +20,11 @@
 
 /* this part will style the container div called images */
 .images{
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid white;
+    padding: 8px;
+    border-radius: 50%;
     /* this part will center the provide space for the images*/
    
     /* this will provide space around the images/ */
@@ -22,6 +33,7 @@
 
 /* this part will style the images */
 i{
+
     /* this will create a border around the icon */
     
 
@@ -33,6 +45,9 @@ i{
 }
 
 .gallery{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     /* this will provide space around the images */
     
 
@@ -43,6 +58,8 @@ i{
 }
 
 .galleryItem{
+    border: 1px solid black
+;
     /* make sure the images are the same size; */
     
     /* make sure there is space between the images you can use margin or flex */
@@ -53,6 +70,9 @@ i{
 
 
 .midSection{
+    display: flex;
+    justify-content: space-between
+; margin: 20px;
     /* this will center the text */
     
 
